// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpers/github-app getRepositories returns filtered list of repos 1`] = `
Array [
  Object {
    "repository": "a/b",
    "token": "token_a",
  },
  Object {
    "repository": "d/f",
    "token": "token_d",
  },
]
`;

exports[`helpers/github-app getRepositories returns list of repos 1`] = `
Array [
  Object {
    "repository": "a/b",
    "token": "token_a",
  },
  Object {
    "repository": "a/c",
    "token": "token_a",
  },
  Object {
    "repository": "d/e",
    "token": "token_d",
  },
  Object {
    "repository": "d/f",
    "token": "token_d",
  },
]
`;

exports[`helpers/github-app getUserRepositories returns a repository list 1`] = `
Array [
  Object {
    "repository": "a",
    "token": "some_token",
  },
  Object {
    "repository": "b",
    "token": "some_token",
  },
]
`;
